Completata struttura navbar fixed (no bootstrap)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
     <title></title>
   </head>
   <body>
+    <!-- header -->
+    <header>
+      <section id="top_header">
+        <div class="container_top_header">
+          <div class="nav_menu">
+            <div class="logo_menu inline_block left">
+                dsjlahdfldsj
+            </div>
+            <div class="menu_center inline_block left">
+              dfhlshdlfhsdl
+            </div>
+            <div class="menu_right inline_block right"">
+              dskjahfldhsflk
+            </div>
+
+
+          </div>
+        </div>
+      </section>
+
+    </header>
+    <!-- /header -->
+
+
+    <!-- main -->
+    <main>
+
+    </main>
+    <!-- main -->
+
+    <!-- footer -->
+    <footer></footer>
+    <!-- /footer -->
 
   </body>
 </html>
