Completata struttura loghi

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <!-- header -->
     <header>
+      <!-- top header -->
       <section id="top_header">
         <div class="container_top_header width_100">
           <div class="nav_menu">
@@ -25,20 +26,25 @@
             </div>
           </div>
         </div>
+      </section>
+      !-- /top header -->
+
+      <!-- bottom header -->
+      <section id="bottom_header">
         <div class="container_bottom_header width_100">
           <div class="container">
             <div class="row">
-              <div class="col-lg-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <div class="col-xs-12 col-md-7 col-lg-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
-              <div class="col-lg-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <div class="col-xs-12 col-md-5 col-lg-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
             </div>
           </div>
-
         </div>
       </section>
+      <!-- /bottom header -->
 
     </header>
     <!-- /header -->
@@ -46,6 +52,44 @@
 
     <!-- main -->
     <main>
+      <section id="logos">
+        <div class="container_logos width_100">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-md-12 col-lg-12">
+                <h4 class="text-center">INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-6 col-md-2 col-lg2">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg2">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg2">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg2">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg2">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg2">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
+              </div>
+            </div>
+            <div class="row">
+              <li class="text-uppercase text-center"><a href="">View customer stories ></a></li>
+            </div>
+          </div>
+        </div>
+
+
+
+      </section>
+
 
     </main>
     <!-- main -->
