--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- main -->
     <main>
       <section id="logos">
-        <div class="container_logos width_100">
+        <div class="container_logos background_container_lightblue width_100">
           <div class="container">
             <div class="row">
               <div class="col-xs-12 col-md-12 col-lg-12">
@@ -86,19 +86,19 @@
           </div>
         </div>
       </section>
+
       <section id="Deploy_and_scale">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-12">
-              <h2 class="text-center">lksdjaklfdjflldjllkfslkd</h2>
+              <h2 class="text-center">Deploy and scale seamlessly</h2>
             </div>
             <div class="col-xs-12 col-md-12 col-lg-12">
-              <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <p class="text-center">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.
               </p>
             </div>
           </div>
         </div>
-
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
@@ -106,10 +106,10 @@
             </div>
             <div class="col-xs-12 col-md-5 col-lg-5">
               <div class="row">
-                <div class="col-xs-12 col-md-6 col-lg-6">
+                <div class="col-xs-12 col-md-6 col-lg-6 margin_bottom30">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis blanditiis aliquid nobis, distinctio cum veritatis sed nihil animi, atque ratione alias minima recusandae, rem, quas non officia commodi! Expedita, repudiandae.
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-6">
+                <div class="col-xs-12 col-md-6 col-lg-6 margin_bottom30">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis blanditiis aliquid nobis, distinctio cum veritatis sed nihil animi, atque ratione alias minima recusandae, rem, quas non officia commodi! Expedita, repudiandae.
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-6">
@@ -120,15 +120,48 @@
                 </div>
               </div>
             </div>
-
-
           </div>
-
         </div>
+      </section>
 
+      <section id="Design_for_developers">
+        <div class="container_developers background_container_lightblue width_100">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-md-12 col-lg-12">
+                <h2 class="text-center">Design for developer</h2>
+              </div>
+              <div class="col-xs-12 col-md-12 col-lg-12">
+                <p class="text-center">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
+                </p>
+              </div>
+              <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+                <img class="img-responsive" src="img/screenshot-create-droplet-12336b41.jpg" alt="">
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <p class="text-center text-uppercase">create computer servers in 55 seconds or less</p>
+                </div>
+                <div class="col-xs-12 text-center">
+                  <span class="carousel_ball"></span>
+                  <span class="carousel_ball"></span>
+                  <span class="carousel_ball"></span>
+                  <span class="carousel_ball"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section id="features">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
 
-
+            </div>
+          </div>
+        </div>
 
       </section>
 
