Completata struttura features

--- a/index.html
+++ b/index.html
@@ -158,7 +158,16 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-
+              <h2 class="text-center">The features your business needs</h2>
+            </div>
+            <div class="col-xs-12 col-md-4 col-lg-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat hic mollitia iste molestias aperiam animi ipsum laborum quasi dolorem, quidem recusandae distinctio voluptas assumenda porro ut nobis nemo dolore totam!
+            </div>
+            <div class="col-xs-12 col-md-4 col-lg-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat hic mollitia iste molestias aperiam animi ipsum laborum quasi dolorem, quidem recusandae distinctio voluptas assumenda porro ut nobis nemo dolore totam!
+            </div>
+            <div class="col-xs-12 col-md-4 col-lg-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat hic mollitia iste molestias aperiam animi ipsum laborum quasi dolorem, quidem recusandae distinctio voluptas assumenda porro ut nobis nemo dolore totam!
             </div>
           </div>
         </div>
