--- a/index.html
+++ b/index.html
@@ -171,7 +171,57 @@
             </div>
           </div>
         </div>
+      </section>
 
+      <section id="service">
+        <div class="container_service background_container_bluemarine">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h2 class="text-center">Service your customers around the world from 12 regions</h2>
+              </div>
+              <div class="col-xs-12 col-md-6 col-md-6">
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-6 col-md-6">
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+                <div class="service_row">
+                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                </div>
+            </div>
+          </div>
+        </div>
       </section>
 
 
