Completata struttura rockerbox

--- a/index.html
+++ b/index.html
@@ -224,6 +224,33 @@
         </div>
       </section>
 
+      <section id="rockerbox">
+        <div class="container_rockerbox background_container_lightblue width_100">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-md-12 col-lg-12">
+                <h2 class="text-center">Development teams loves DigitalOcean</h2>
+              </div>
+              <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+                <div class="rockerbox_box text-center">
+                  <img class="img_rockerbox" src="https://www.digitalocean.com/assets/media/homepage/teams/rockerbox-logo-51462da2.png" alt="">
+                  <p>“We have been able to make scaling the technical infrastructure of our business cost effective and efficient.”</p>
+                  <p>Rick O’Toole</p>
+                  <p>Co-founder and CTO</p>
+                  <a href="">Read story ></a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 text-center">
+                  <span class="carousel_ball"></span>
+                  <span class="carousel_ball"></span>
+                  <span class="carousel_ball"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+      </section>
+
 
     </main>
     <!-- main -->
