Completata struttura footer

--- a/index.html
+++ b/index.html
@@ -250,13 +250,71 @@
             </div>
           </div>
       </section>
-
-
     </main>
     <!-- main -->
 
     <!-- footer -->
-    <footer></footer>
+    <footer>
+      <section id="top_footer">
+        <div class="container_top_footer width_100 background_container_bluemarine text-center">
+          <h2>Get started now.</h2>
+          <button class="btn" type="button" name="button">create your account</button>
+        </div>
+      </section>
+
+      <section id="bottom_footer">
+        <div class="container_bottom_footer width_100 background_container_deepblue">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-md-4 col-lg-4">
+                jdsjlkafjdshfhsdkjfhòjsdkhfajshò
+              </div>
+              <div class="col-xs-12 col-md-2 col-lg-2">
+                <ul>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                </ul>
+              </div>
+              <div class="col-xs-12 col-md-2 col-lg-2">
+                <ul>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                </ul>
+              </div>
+              <div class="col-xs-12 col-md-2 col-lg-2">
+                <ul>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                </ul>
+              </div>
+              <div class="col-xs-12 col-md-2 col-lg-2">
+                <ul>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                  <li><a href="#">link</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </footer>
     <!-- /footer -->
 
   </body>
