completato dettaglio header top

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Digital Ocean</title>
   </head>
@@ -16,18 +17,29 @@
         <div class="container_top_header width_100">
           <div class="nav_menu">
             <div class="logo_menu inline_block left">
-                dsjlahdfldsj
+                <img src="img/logo.png" alt="">
             </div>
-            <div class="menu_center inline_block left">
-              dfhlshdlfhsdl
+            <div class="menu_center left visible_lg">
+              <ul class="menu_top list-inline">
+                <li><a href="">Products <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span></a></li>
+                <li><a href="">Customers</a></li>
+                <li><a href="">Community <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span></a></li>
+                <li><a href="">Pricing</a></li>
+              </ul>
             </div>
-            <div class="menu_right inline_block right"">
-              dskjahfldhsflk
+            <div class="menu_right inline_block right">
+              <ul class="menu_top list-inline visible_lg">
+                <li><a href="">Docs</a></li>
+                <li><a href="">Support <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span></a></li>
+                <li><a href="">Login</a></li>
+                <button class="btn button_menu" type="button" name="button">Sign up</button>
+              </ul>
+              <a href="#"><span class="glyphicon glyphicon glyphicon-menu-hamburger menu_chevron menu_bar hidden_lg" aria-hidden="true"></span></a>
             </div>
           </div>
         </div>
       </section>
-      !-- /top header -->
+      <!-- /top header -->
 
       <!-- bottom header -->
       <section id="bottom_header">
