In lavorazione dettagli jumbotron

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                         <label class="sr-only" for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                       </div>
-                      <button type="submit" class="btn btn-default">Submit</button>
+                      <button type="submit" class="btn btn_form btn_account">Create your account</button>
+                      <button type="submit" class="btn btn_form btn_google bold">Sign up with Google</button>
                     </form>
                   </div>
                 </div>
