--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Digital Ocean</title>
@@ -53,7 +54,7 @@
               <div class="col-xs-12 col-md-5 col-lg-5">
                 <div class="header_form padding_upbottom">
                   <h2 class="deepblue bold text-center">Deploy your app in seconds.</h2>
-                  <h2 class="light bold text-center">Get start now.</h2>
+                  <h2 class="light bold margin_top10 text-center">Get start now.</h2>
                   <div class="container_form">
                     <form>
                       <div class="form-group">
@@ -65,8 +66,9 @@
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                       </div>
                       <button type="submit" class="btn btn_form btn_account">Create your account</button>
-                      <button type="submit" class="btn btn_form btn_google bold">Sign up with Google</button>
+                      <button type="submit" class="btn btn_form relative btn_google bold"><span class="absolute"><i class="fab fa-google"></i></span>Sign up with Google</button>
                     </form>
+                    <h6 class="bold text-center">by signing up you agree to the <a class="policy" href="">Term of service.</a></h6>
                   </div>
                 </div>
             </div>
