--- a/index.html
+++ b/index.html
@@ -85,35 +85,35 @@
     <!-- main -->
     <main>
       <section id="logos">
-        <div class="container_logos background_container_lightblue width_100">
+        <div class="container_logos background_container_lightblue padding_upbottom width_100">
           <div class="container">
             <div class="row">
               <div class="col-xs-12 col-md-12 col-lg-12">
-                <h4 class="text-center">INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
+                <h4 class="logos_title text-center bold">INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
+              </div>
+            </div>
+            <div class="row row_logos padding_upbottom">
+              <div class="col-xs-6 col-md-2 col-lg1">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg1">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/gitlab-166e2067.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg1">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/slack-e20293da.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg1">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/hashicorp-4431df79.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg1">
+                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/wework-be6eab32.png" alt="">
+              </div>
+              <div class="col-xs-6 col-md-2 col-lg1">
+                <img class="stripe_logo last" src="https://www.digitalocean.com/assets/media/homepage/logos/splunk-06b17d75.png" alt="">
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-6 col-md-2 col-lg2">
-                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2 col-lg2">
-                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2 col-lg2">
-                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2 col-lg2">
-                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2 col-lg2">
-                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2 col-lg2">
-                <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
-              </div>
-            </div>
-            <div class="row">
-              <li class="text-uppercase text-center"><a href="">View customer stories ></a></li>
+              <li class=" text-center bold"><a href="">View customer stories ></a></li>
             </div>
           </div>
         </div>
@@ -213,7 +213,7 @@
                 <h2 class="text-center">Service your customers around the world from 12 regions</h2>
               </div>
               <div class="col-xs-12 col-md-6 col-md-6">
-                <div class="service_row">
+                <div class="service_row width_100">
                   <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
