--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                       </div>
                       <button type="submit" class="btn btn_form btn_account">Create your account</button>
-                      <button type="submit" class="btn btn_form relative btn_google bold"><span class="absolute"><i class="fab fa-google"></i></span>Sign up with Google</button>
+                      <button type="submit" class="btn btn_form relative btn_google bold">
+                        <img class="img_google absolute" src="img/google-icon.png" alt="">
+                        Sign up with Google
+                      </button>
                     </form>
                     <h6 class="bold text-center">by signing up you agree to the <a class="policy" href="">Term of service.</a></h6>
                   </div>
@@ -120,23 +123,27 @@
       </section>
 
       <section id="Deploy_and_scale">
-        <div class="container">
+        <div class="container padding_upbottom">
           <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-12">
-              <h2 class="text-center">Deploy and scale seamlessly</h2>
+              <h2 class="title_h2 text-center  bold deepblue">Deploy and scale seamlessly</h2>
             </div>
             <div class="col-xs-12 col-md-12 col-lg-12">
-              <p class="text-center">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.
+              <p class="paragraph_subtitle text-center margin_bottom30">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.
               </p>
             </div>
           </div>
-        </div>
-        <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <div class="col-xs-12 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
+              <div class="deploy_column_right paragraph_color">
+                <h4 class="margin_bottom30">Deploy</h4>
+                <h4 class="margin_bottom30">Scale</h4>
+                <h4 class="margin_bottom30">Store</h4>
+                <h4 class="margin_bottom30">Secure</h4>
+                <h4 class="margin_bottom30">Monitor</h4>
+              </div>
             </div>
-            <div class="col-xs-12 col-md-5 col-lg-5">
+            <div class="col-xs-12 col-md-7 col-lg-7">
               <div class="row">
                 <div class="col-xs-12 col-md-6 col-lg-6 margin_bottom30">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis blanditiis aliquid nobis, distinctio cum veritatis sed nihil animi, atque ratione alias minima recusandae, rem, quas non officia commodi! Expedita, repudiandae.
