--- a/index.html
+++ b/index.html
@@ -146,16 +146,32 @@
             <div class="col-xs-12 col-md-7 col-lg-7">
               <div class="row">
                 <div class="col-xs-12 col-md-6 col-lg-6 margin_bottom30">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis blanditiis aliquid nobis, distinctio cum veritatis sed nihil animi, atque ratione alias minima recusandae, rem, quas non officia commodi! Expedita, repudiandae.
+                  <div class="service_box">
+                    <img src="img/cluster-deploy.svg" alt="">
+                    <h4 class="deepblue bold margin_bottomtop15">Cluster deployments</h4>
+                    <p class="paragraph_color">Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
+                  </div>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-6 margin_bottom30">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis blanditiis aliquid nobis, distinctio cum veritatis sed nihil animi, atque ratione alias minima recusandae, rem, quas non officia commodi! Expedita, repudiandae.
+                  <div class="service_box">
+                    <img src="img/optimized-compute.svg" alt="">
+                    <h4 class="deepblue bold margin_bottomtop15">Optimize compute time</h4>
+                    <p class="paragraph_color">Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
+                  </div>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-6">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis blanditiis aliquid nobis, distinctio cum veritatis sed nihil animi, atque ratione alias minima recusandae, rem, quas non officia commodi! Expedita, repudiandae.
+                  <div class="service_box">
+                    <img src="img/one-click.svg" alt="">
+                    <h4 class="deepblue bold margin_bottomtop15">One clicks app</h4>
+                    <p class="paragraph_color">Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
+                  </div>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-6">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis blanditiis aliquid nobis, distinctio cum veritatis sed nihil animi, atque ratione alias minima recusandae, rem, quas non officia commodi! Expedita, repudiandae.
+                  <div class="service_box">
+                    <img src="img/global.svg" alt="">
+                    <h4 class="deepblue bold margin_bottomtop15">Global availability</h4>
+                    <p class="paragraph_color">Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
+                  </div>
                 </div>
               </div>
             </div>
