Completato dettagli sezione developers

--- a/index.html
+++ b/index.html
@@ -180,29 +180,32 @@
       </section>
 
       <section id="Design_for_developers">
-        <div class="container_developers background_container_lightblue width_100">
+        <div class="container_developers padding_upbottom background_container_lightblue width_100">
           <div class="container">
             <div class="row">
               <div class="col-xs-12 col-md-12 col-lg-12">
-                <h2 class="text-center">Design for developer</h2>
+                <h2 class="title_h2 text-center  bold deepblue">Design for developer</h2>
               </div>
               <div class="col-xs-12 col-md-12 col-lg-12">
-                <p class="text-center">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
+                <p class="paragraph_subtitle text-center margin_bottom60">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
                 </p>
               </div>
               <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
-                <img class="img-responsive" src="img/screenshot-create-droplet-12336b41.jpg" alt="">
+                <span class="glyphicon glyphicon glyphicon-chevron-left left_arrow absolute" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon glyphicon-chevron-right right_arrow absolute" aria-hidden="true"></span>
+                <div class="dev_slider margin_bottom30">
+                  <img class="img-responsive" src="img/screenshot-create-droplet-12336b41.jpg" alt="">
+                </div>
+
               </div>
-              <div class="row">
-                <div class="col-xs-12">
-                  <p class="text-center text-uppercase">create computer servers in 55 seconds or less</p>
-                </div>
-                <div class="col-xs-12 text-center">
-                  <span class="carousel_ball"></span>
-                  <span class="carousel_ball"></span>
-                  <span class="carousel_ball"></span>
-                  <span class="carousel_ball"></span>
-                </div>
+              <div class="col-xs-12">
+                <p class="text-center paragraph_font deepblue bold">Create computer servers in 55 seconds or less</p>
+              </div>
+              <div class="col-xs-12 text-center">
+                <span class="carousel_ball"></span>
+                <span class="carousel_ball"></span>
+                <span class="carousel_ball"></span>
+                <span class="carousel_ball"></span>
               </div>
             </div>
           </div>
