--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
               </div>
             </div>
             <div class="row">
-              <li class=" text-center bold"><a href="">View customer stories ></a></li>
+              <div class="col-xs-12">
+                <li class=" text-center bold"><a href="">View customer stories ></a></li>
+              </div>
             </div>
           </div>
         </div>
@@ -180,11 +182,11 @@
       </section>
 
       <section id="Design_for_developers">
-        <div class="container_developers padding_upbottom background_container_lightblue width_100">
+        <div class="container_developers padding_upbottom background_container_lightblue">
           <div class="container">
             <div class="row">
               <div class="col-xs-12 col-md-12 col-lg-12">
-                <h2 class="title_h2 text-center  bold deepblue">Design for developer</h2>
+                <h2 class="title_h2 text-center bold deepblue">Design for developer</h2>
               </div>
               <div class="col-xs-12 col-md-12 col-lg-12">
                 <p class="paragraph_subtitle text-center margin_bottom60">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
@@ -213,19 +215,34 @@
       </section>
 
       <section id="features">
-        <div class="container">
+        <div class="container padding_upbottom">
           <div class="row">
             <div class="col-xs-12">
-              <h2 class="text-center">The features your business needs</h2>
+              <h2 class="title_h2 text-center bold deepblue margin_bottom60">The features your business needs</h2>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat hic mollitia iste molestias aperiam animi ipsum laborum quasi dolorem, quidem recusandae distinctio voluptas assumenda porro ut nobis nemo dolore totam!
+              <div class="service_box margin_bottom30">
+                <img src="img/pred-pricing.svg" alt="">
+                <h4 class="deepblue bold margin_bottomtop15">Predictable pricing</h4>
+                <p class="paragraph_color">Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
+                <li class="bold"><a href="">Pricing ></a></li>
+              </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat hic mollitia iste molestias aperiam animi ipsum laborum quasi dolorem, quidem recusandae distinctio voluptas assumenda porro ut nobis nemo dolore totam!
+              <div class="service_box margin_bottom30">
+                <img src="img/world-class.svg" alt="">
+                <h4 class="deepblue bold margin_bottomtop15">World-class service</h4>
+                <p class="paragraph_color">Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. You’ll feel the love.</p>
+                <li class="bold"><a href="">Support ></a></li>
+              </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat hic mollitia iste molestias aperiam animi ipsum laborum quasi dolorem, quidem recusandae distinctio voluptas assumenda porro ut nobis nemo dolore totam!
+              <div class="service_box margin_bottom30">
+                <img src="img/reliable-platform.svg" alt="">
+                <h4 class="deepblue bold margin_bottomtop15">Reliable platform</h4>
+                <p class="paragraph_color">More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+                <li class="bold"><a href="">Security ></a></li>
+              </div>
             </div>
           </div>
         </div>
@@ -233,7 +250,7 @@
 
       <section id="service">
         <div class="container_service background_container_bluemarine">
-          <div class="container">
+          <div class="container padding_upbottom">
             <div class="row">
               <div class="col-xs-12">
                 <h2 class="text-center">Service your customers around the world from 12 regions</h2>
