Completato dettagli sezione service

--- a/index.html
+++ b/index.html
@@ -250,49 +250,49 @@
 
       <section id="service">
         <div class="container_service background_container_bluemarine">
-          <div class="container padding_upbottom">
+          <div class="container padding_upbottom80 margin_bottom60">
             <div class="row">
               <div class="col-xs-12">
-                <h2 class="text-center">Service your customers around the world from 12 regions</h2>
+                <h2 class="title_h2 text-center bold white">Service your customers around the world from 12 regions</h2>
               </div>
               <div class="col-xs-12 col-md-6 col-md-6">
                 <div class="service_row width_100">
                   <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>AMS3 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>BLR1 <span>Bangalore, India</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>FRA1 <span>Frankfurt, Germany</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>LON1 <span>London, UK</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>NYC1 <span>New York, USA</span> <a href="">test speed ></a></p>
                 </div>
               </div>
               <div class="col-xs-12 col-md-6 col-md-6">
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>NYC2 <span>New York, USA</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>NYC3 <span>New York, USA</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>SFO1 <span>San Francisco, USA</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>SFO2 <span>San Francisco, USA</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>SGP1 <span>Singapore</span> <a href="">test speed ></a></p>
                 </div>
                 <div class="service_row">
-                  <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
+                  <p>TOR1 <span>Toronto, Canada</span> <a href="">test speed ></a></p>
                 </div>
             </div>
           </div>
