Completato dettaglio rockerbox

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
       <section id="service">
         <div class="container_service background_container_bluemarine">
-          <div class="container padding_upbottom80 margin_bottom60">
+          <div class="container padding_upbottom80">
             <div class="row">
               <div class="col-xs-12">
                 <h2 class="title_h2 text-center bold white">Service your customers around the world from 12 regions</h2>
@@ -300,27 +300,31 @@
       </section>
 
       <section id="rockerbox">
-        <div class="container_rockerbox background_container_lightblue width_100">
+        <div class="container_rockerbox background_container_lightblue width_100 padding_upbottom80">
           <div class="container">
             <div class="row">
               <div class="col-xs-12 col-md-12 col-lg-12">
-                <h2 class="text-center">Development teams loves DigitalOcean</h2>
+                <h2 class="title_h2 text-center bold deepblue margin_bottom60">Development teams loves DigitalOcean</h2>
               </div>
-              <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+              <div class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+                <span class="glyphicon glyphicon glyphicon-chevron-left left_arrow absolute" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon glyphicon-chevron-right right_arrow absolute" aria-hidden="true"></span>
                 <div class="rockerbox_box text-center">
-                  <img class="img_rockerbox" src="https://www.digitalocean.com/assets/media/homepage/teams/rockerbox-logo-51462da2.png" alt="">
+                  <img class="img_rockerbox img-responsive" src="https://www.digitalocean.com/assets/media/homepage/teams/rockerbox-logo-51462da2.png" alt="">
                   <p>“We have been able to make scaling the technical infrastructure of our business cost effective and efficient.”</p>
-                  <p>Rick O’Toole</p>
-                  <p>Co-founder and CTO</p>
-                  <a href="">Read story ></a>
-                </div>
+                  <h5 class="bold">Rick O’Toole</h5>
+                  <h5>Co-founder and CTO</h5>
+                  <div class="rockerbox_link">
+                    <a class="bold" href="">Read story ></a>
+                  </div>
+                  </div>
               </div>
-              <div class="row">
-                <div class="col-xs-12 text-center">
-                  <span class="carousel_ball"></span>
-                  <span class="carousel_ball"></span>
-                  <span class="carousel_ball"></span>
-                </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 text-center margin_bottomtop15">
+                <span class="carousel_ball inline_block"></span>
+                <span class="carousel_ball inline_block"></span>
+                <span class="carousel_ball inline_block"></span>
               </div>
             </div>
           </div>
