Completato dettaglio top footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><a href="">Docs</a></li>
                 <li><a href="">Support <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span></a></li>
                 <li><a href="">Login</a></li>
-                <button class="btn button_menu" type="button" name="button">Sign up</button>
+                <li><button class="btn button_menu" type="button" name="button">Sign up</button></li>
               </ul>
               <a href="#"><span class="glyphicon glyphicon glyphicon-menu-hamburger menu_chevron menu_bar hidden_lg" aria-hidden="true"></span></a>
             </div>
@@ -225,7 +225,7 @@
                 <img src="img/pred-pricing.svg" alt="">
                 <h4 class="deepblue bold margin_bottomtop15">Predictable pricing</h4>
                 <p class="paragraph_color">Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
-                <li class="bold"><a href="">Pricing ></a></li>
+                <a class="bold" href="">Pricing ></a>
               </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-4">
@@ -233,7 +233,7 @@
                 <img src="img/world-class.svg" alt="">
                 <h4 class="deepblue bold margin_bottomtop15">World-class service</h4>
                 <p class="paragraph_color">Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. You’ll feel the love.</p>
-                <li class="bold"><a href="">Support ></a></li>
+                <a class="bold" href="">Support ></a>
               </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-4">
@@ -241,7 +241,7 @@
                 <img src="img/reliable-platform.svg" alt="">
                 <h4 class="deepblue bold margin_bottomtop15">Reliable platform</h4>
                 <p class="paragraph_color">More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
-                <li class="bold"><a href="">Security ></a></li>
+                <a class="bold" href="">Security ></a>
               </div>
             </div>
           </div>
@@ -335,9 +335,19 @@
     <!-- footer -->
     <footer>
       <section id="top_footer">
-        <div class="container_top_footer width_100 background_container_bluemarine text-center">
-          <h2>Get started now.</h2>
-          <button class="btn" type="button" name="button">create your account</button>
+        <div class="container_topfooter background_container_bluemarine">
+          <div class="container padding_upbottom80">
+            <div class="row">
+              <div class="col-xs-12">
+                <h2 class="title_h2 text-center bold white">Get started now.</h2>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 text-center">
+                  <button class="btn button_footer" type="button" name="button">Create your account</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -391,6 +401,7 @@
             </div>
           </div>
         </div>
+        <img src="img\logo-small.svg" alt="">
       </section>
 
     </footer>
