Completato dettaglio bottom footer

--- a/index.html
+++ b/index.html
@@ -353,55 +353,98 @@
 
       <section id="bottom_footer">
         <div class="container_bottom_footer width_100 background_container_deepblue">
-          <div class="container">
+          <div class="container padding_upbottom80">
             <div class="row">
               <div class="col-xs-12 col-md-4 col-lg-4">
-                jdsjlkafjdshfhsdkjfhòjsdkhfajshò
+                <div class="footer_credits">
+                  <img class="margin_bottom10" src="img\logo-small.svg" alt="">
+                  <p class="white">© 2018 DigitalOcean, LLC. All rights reserved.</p>
+                  <p class="paragraph_color">Proudly made in NY.</p>
+                  <ul class="footer_social list-inline">
+                    <li>
+                      <a href="">
+                        <i class="fab fa-twitter"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="">
+                        <i class="fab fa-facebook-square"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="">
+                        <i class="fab fa-instagram"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="">
+                        <i class="fab fa-youtube"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="">
+                        <i class="fab fa-linkedin"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
               <div class="col-xs-12 col-md-2 col-lg-2">
-                <ul>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
+                <h4 class="white">Company</h4>
+                <ul class="footer_link">
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Leadership</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Careers</a></li>
+                  <li><a href="#">Partners</a></li>
+                  <li><a href="#">Referral Program</a></li>
+                  <li><a href="#">Press</a></li>
+                  <li><a href="#">Legal & Security</a></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-md-2 col-lg-2">
-                <ul>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
+                <h4 class="white">Products</h4>
+                <ul class="footer_link">
+                  <li><a href="#">Droplets</a></li>
+                  <li><a href="#">Kubernetes</a></li>
+                  <li><a href="#">Managed Databases</a></li>
+                  <li><a href="#">Spaces</a></li>
+                  <li><a href="#">Marketplace</a></li>
+                  <li><a href="#">Load Balancers</a></li>
+                  <li><a href="#">Block Storage</a></li>
+                  <li><a href="#">Tools & Integrations</a></li>
+                  <li><a href="#">API</a></li>
+                  <li><a href="#">Pricing</a></li>
+                  <li><a href="#">Documentation</a></li>
+                  <li><a href="#">Release Notes</a></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-md-2 col-lg-2">
-                <ul>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
+                <h4 class="white">Community</h4>
+                <ul class="footer_link">
+                  <li><a href="#">Tutorials</a></li>
+                  <li><a href="#">Meetups</a></li>
+                  <li><a href="#">Q&A</a></li>
+                  <li><a href="#">Write for DOnations</a></li>
+                  <li><a href="#">Droplets for Demos</a></li>
+                  <li><a href="#">Hatch Startup Program</a></li>
+                  <li><a href="#">Shop Swag</a></li>
+                  <li><a href="#">Research Program</a></li>
+                  <li><a href="#">Currents Research</a></li>
+                  <li><a href="#">Open Source</a></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-md-2 col-lg-2">
-                <ul>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
-                  <li><a href="#">link</a></li>
+                <h4 class="white">Support</h4>
+                <ul class="footer_link">
+                  <li><a href="#">Contact support</a></li>
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">Network status</a></li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-        <img src="img\logo-small.svg" alt="">
       </section>
 
     </footer>
