--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <div class="col-xs-12 col-md-7 col-lg-7">
                 <h1 class="main_title bold white">The simplest cloud platform for developers and team</h1>
                 <h2 class="main_subtitle white">We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.</h2>
-            </div>
+              </div>
               <div class="col-xs-12 col-md-5 col-lg-5">
                 <div class="header_form padding_upbottom">
                   <h2 class="deepblue bold text-center">Deploy your app in seconds.</h2>
@@ -74,7 +74,7 @@
                     <h6 class="bold text-center">by signing up you agree to the <a class="policy" href="">Term of service.</a></h6>
                   </div>
                 </div>
-            </div>
+              </div>
             </div>
           </div>
         </div>
@@ -116,8 +116,8 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-12">
-                <li class=" text-center bold"><a href="">View customer stories ></a></li>
+              <div class="col-xs-12 text-center">
+                <a class="bold" href="">View customer stories ></a>
               </div>
             </div>
           </div>
@@ -294,6 +294,7 @@
                 <div class="service_row">
                   <p>TOR1 <span>Toronto, Canada</span> <a href="">test speed ></a></p>
                 </div>
+              </div>
             </div>
           </div>
         </div>
@@ -328,6 +329,7 @@
               </div>
             </div>
           </div>
+        </div>
       </section>
     </main>
     <!-- main -->
@@ -357,7 +359,7 @@
             <div class="row">
               <div class="col-xs-12 col-md-4 col-lg-4">
                 <div class="footer_credits">
-                  <img class="margin_bottom10" src="img\logo-small.svg" alt="">
+                  <img class="margin_bottom10" src="img/logo-small.svg" alt="">
                   <p class="white">© 2018 DigitalOcean, LLC. All rights reserved.</p>
                   <p class="paragraph_color">Proudly made in NY.</p>
                   <ul class="footer_social list-inline">
