--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
     <main>
       <section id="logos">
         <div class="container_logos background_container_lightblue padding_upbottom width_100">
-          <div class="container">
+          <div class="container padding_upbottom">
             <div class="row">
               <div class="col-xs-12 col-md-12 col-lg-12">
                 <h4 class="logos_title text-center bold">INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
               </div>
             </div>
-            <div class="row row_logos padding_upbottom">
+            <div class="row row_logos">
               <div class="col-xs-6 col-md-2 col-lg1">
                 <img class="stripe_logo" src="https://www.digitalocean.com/assets/media/homepage/logos/docker-bab60eeb.png" alt="">
               </div>
